<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scratchLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_title_scratch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/scratch_palette"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_cancel_scratch"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/proxima_nova"
        android:text="@string/button_cancel"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_save_scratch"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/button_save_scratch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/proxima_nova"
        android:text="@string/button_save"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_cancel_scratch" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_scratch_values"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title_scratch">

        <ImageView
            android:id="@+id/color1_scratch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/color2_scratch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/color3_scratch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/color4_scratch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/color5_scratch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_scratch_values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EDEDED"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingStart="24dp"
        android:paddingTop="18dp"
        android:paddingEnd="24dp"
        android:paddingBottom="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentColor_scratch">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewHex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pound"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewHex_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/hex"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewR_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/rgb_val"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/g"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewG_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/rgb_val"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/b"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewB_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/rgb_val"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_scratch_RGB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button_save_scratch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_scratch_values">

        <TextView
            android:id="@+id/textViewRGB_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rgb"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewR_label"
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:text="@string/r"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/seekBarR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:max="255"
                android:progressTint="@color/seek_bar_r_progress"
                android:thumbTint="@color/seek_bar_r_progress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewG_label"
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:text="@string/g"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/seekBarG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255"
                android:progressTint="@color/seek_bar_g_progress"
                android:thumbTint="@color/seek_bar_g_progress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewB_label"
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:text="@string/b"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/seekBarB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255"
                android:progressTint="@color/seek_bar_b_progress"
                android:thumbTint="@color/seek_bar_b_progress" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/currentColor_scratch"
        android:layout_width="0dp"
        android:layout_height="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>