...
            android:layout_weight="1"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/editText_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_name_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_name_edit"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
...
