<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_saved"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/generate_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout_generate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_saved">

        <ImageView
            android:id="@+id/color5_generate"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_weight="1"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/color4_generate"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_weight="1"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/color2_generate"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_weight="1"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/color1_generate"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_weight="1"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/color3_generate"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_weight="1"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <Button
        android:id="@+id/button_random"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/proxima_nova"
        android:text="@string/generate_button_random"
        android:textStyle="bold"
        app:icon="@android:drawable/ic_popup_sync"
        app:iconGravity="textStart"
        app:iconSize="24dp"
        app:layout_constraintEnd_toStartOf="@+id/button_generate_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_generate" />

    <Button
        android:id="@+id/button_scratch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/proxima_nova"
        android:text="@string/generate_button_scratch"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_image"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/proxima_nova"
        android:text="@string/generate_button_image"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/textView_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/generate_or"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_scratch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_random" />

    <Button
        android:id="@+id/button_generate_save"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/proxima_nova"
        android:text="@string/button_save"
        android:textStyle="bold"
        app:icon="@android:drawable/ic_input_add"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_random"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_generate"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>